--- a/src/blog.html
+++ b/src/blog.html
@@ -28,9 +28,10 @@
                 <use xlink:href="img/icons/icons.svg#document"></use>
               </svg>
             </div>
-            <h3 class="blog-block__title">Donec quis quam a lorem volutpat vestibulum. Integer pharetra dolor. In in interdum tellus.</h3>
-            <img class="blog-block__img" src="img/blog/blog-1.jpg" alt="blog-img" >
-            <p class="blog-block__text">Integer ornare libero nisi. Duis ac magna urna. Nulla facilisi. Phasellus at ante magna. Quisque nec porta nulla. Suspendisse nec orci vel elit aliquet blandit in non orci. Vivamus posuere dui eget lacinia rutrum. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed ullamcorper neque sed consequat bibendum...</p>
+            <h3 class="blog-block__title">30-минут Кардио тренировки для сжигания жира. Упражнения для похудения в домашних условиях. </h3>
+            <iframe class="blog-block__video"src="https://www.youtube.com/embed/bnzHECC0Z8A" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <p class="blog-block__text">Каждая девушка мечтает о тонкой талии и плоском животике. Ведь это очень привлекательно и повышает самооценку. Как же этого достичь?
+              Всё не так уж сложно, необходимо немного времени, столько же усилий и мечта будет достигнута. Однако достижение результата будет зависеть от точности выполнения рекомендаций и упражнений.</p>
             <div class="blog-block__bottom">
               <div class="blog-block__date">
                 <svg class="blog-block__date-icon" >
@@ -42,7 +43,7 @@
                 <svg class="blog-block__person-icon" >
                   <use xlink:href="img/icons/icons.svg#user"></use>
                 </svg>
-                <p class="blog-block__person-text">Джон Смит</p>
+                <p class="blog-block__person-text">Жасмин Паттер</p>
               </div>
               <div class="blog-block__like">
                 <svg class="blog-block__like-icon" >
@@ -56,7 +57,7 @@
                 </svg>
                 <p class="blog-block__send-text">120</p>
               </div>
-              <a href="#" class="blog-block__btn">Read More</a>
+              <a href="#" class="blog-block__btn">Читать</a>
             </div>
           </div>
           <hr class="blog-block__divide">
@@ -66,9 +67,9 @@
                 <use xlink:href="img/icons/icons.svg#document"></use>
               </svg>
             </div>
-            <h3 class="blog-block__title">Donec quis quam a lorem volutpat vestibulum. Integer pharetra dolor. In in interdum tellus.</h3>
-            <img class="blog-block__img" src="img/blog/blog-1.jpg" alt="blog-img" >
-            <p class="blog-block__text">Integer ornare libero nisi. Duis ac magna urna. Nulla facilisi. Phasellus at ante magna. Quisque nec porta nulla. Suspendisse nec orci vel elit aliquet blandit in non orci. Vivamus posuere dui eget lacinia rutrum. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed ullamcorper neque sed consequat bibendum...</p>
+            <h3 class="blog-block__title">Болят мышцы после тренировки - что делать?</h3>
+            <img class="blog-block__img" src="img/blog/blog-2.jpg" alt="blog-img" >
+            <p class="blog-block__text">Всем, кто нашёл в себе силы и начал заниматься спортом, знакомо чувство жжения в мышцах после напряжённой тренировки. Но нередко вместо такого (даже в чём-то приятного) ощущения появляется острая мышечная боль… Особенно часто от этого страдают новички, ошибочно выбравшие уровень интенсивности своих занятий.</p>
             <div class="blog-block__bottom">
               <div class="blog-block__date">
                 <svg class="blog-block__date-icon" >
@@ -94,7 +95,7 @@
                 </svg>
                 <p class="blog-block__send-text">120</p>
               </div>
-              <a href="#" class="blog-block__btn">Read More</a>
+              <a href="#" class="blog-block__btn">Читать</a>
             </div>
           </div>
           <hr class="blog-block__divide">
@@ -104,9 +105,9 @@
                 <use xlink:href="img/icons/icons.svg#document"></use>
               </svg>
             </div>
-            <h3 class="blog-block__title">Donec quis quam a lorem volutpat vestibulum. Integer pharetra dolor. In in interdum tellus.</h3>
+            <h3 class="blog-block__title">Ошибки при занятии фитнесом</h3>
             <img class="blog-block__img" src="img/blog/blog-1.jpg" alt="blog-img" >
-            <p class="blog-block__text">Integer ornare libero nisi. Duis ac magna urna. Nulla facilisi. Phasellus at ante magna. Quisque nec porta nulla. Suspendisse nec orci vel elit aliquet blandit in non orci. Vivamus posuere dui eget lacinia rutrum. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed ullamcorper neque sed consequat bibendum...</p>
+            <p class="blog-block__text">Итак, вы нашли в себе силы начать заниматься фитнесом, определили свой тип фигуры и наметили план по работе над проблемными участками, записались в тренажёрный зал или решили заниматься дома – всё вроде бы идёт как надо, и вот вы уже предвкушаете через некоторое время увидеть в зеркале желаемый результат, но его нет.</p>
             <div class="blog-block__bottom">
               <div class="blog-block__date">
                 <svg class="blog-block__date-icon" >
@@ -132,7 +133,7 @@
                 </svg>
                 <p class="blog-block__send-text">120</p>
               </div>
-              <a href="#" class="blog-block__btn">Read More</a>
+              <a href="#" class="blog-block__btn">Читать</a>
             </div>
           </div>
           <hr class="blog-block__divide">
@@ -142,9 +143,9 @@
                 <use xlink:href="img/icons/icons.svg#document"></use>
               </svg>
             </div>
-            <h3 class="blog-block__title">Donec quis quam a lorem volutpat vestibulum. Integer pharetra dolor. In in interdum tellus.</h3>
-            <img class="blog-block__img" src="img/blog/blog-1.jpg" alt="blog-img" >
-            <p class="blog-block__text">Integer ornare libero nisi. Duis ac magna urna. Nulla facilisi. Phasellus at ante magna. Quisque nec porta nulla. Suspendisse nec orci vel elit aliquet blandit in non orci. Vivamus posuere dui eget lacinia rutrum. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed ullamcorper neque sed consequat bibendum...</p>
+            <h3 class="blog-block__title">Как начать заниматься фитнесом?</h3>
+            <img class="blog-block__img" src="img/blog/blog-3.jpg" alt="blog-img" >
+            <p class="blog-block__text">Сколь часто приходится слышать вопрос на тему: «Как себя заставить тренироваться? Всё понимаю, знаю, что надо, знаю, что будет полезно, но никак не могу себя заставить начать заниматься!»</p>
             <div class="blog-block__bottom">
               <div class="blog-block__date">
                 <svg class="blog-block__date-icon" >
@@ -156,7 +157,7 @@
                 <svg class="blog-block__person-icon" >
                   <use xlink:href="img/icons/icons.svg#user"></use>
                 </svg>
-                <p class="blog-block__person-text">Джон Смит</p>
+                <p class="blog-block__person-text">Дэми Мосс</p>
               </div>
               <div class="blog-block__like">
                 <svg class="blog-block__like-icon" >
@@ -170,7 +171,7 @@
                 </svg>
                 <p class="blog-block__send-text">120</p>
               </div>
-              <a href="#" class="blog-block__btn">Read More</a>
+              <a href="#" class="blog-block__btn">Читать</a>
             </div>
           </div>
         </div>
@@ -201,10 +202,10 @@
               <li class="blog-post__info">
                 <a href="#" class="blog-post__info-link">
                   <p class="blog-post__info-text">
-                    Curabitur vitae velit
+                    Имбирь для улучшения памяти
                     <br>
                     <span class="blog-post__date">
-                      25 Сен 2020
+                      26 Сен 2020
                     </span>
                   </p>
                 </a>
@@ -212,10 +213,10 @@
               <li class="blog-post__info">
                 <a href="#" class="blog-post__info-link">
                   <p class="blog-post__info-text">
-                    Curabitur vitae velit
+                    Креатин с водой работает лучше
                     <br>
                     <span class="blog-post__date">
-                      25 Сен 2020
+                      23 Сен 2020
                     </span>
                   </p>
                 </a>
@@ -223,10 +224,10 @@
               <li class="blog-post__info">
                 <a href="#" class="blog-post__info-link">
                   <p class="blog-post__info-text">
-                    Curabitur vitae velit
+                    Цинк повышает иммунитет
                     <br>
                     <span class="blog-post__date">
-                      25 Сен 2020
+                      20 Сен 2020
                     </span>
                   </p>
                 </a>
@@ -234,10 +235,10 @@
               <li class="blog-post__info">
                 <a href="#" class="blog-post__info-link">
                   <p class="blog-post__info-text">
-                    Curabitur vitae velit
+                    Диеты для силы и роста мышц
                     <br>
                     <span class="blog-post__date">
-                      25 Сен 2020
+                      18 Сен 2020
                     </span>
                   </p>
                 </a>
@@ -245,10 +246,10 @@
               <li class="blog-post__info">
                 <a href="#" class="blog-post__info-link">
                   <p class="blog-post__info-text">
-                    Curabitur vitae velit
+                    Фрукты, ягоды для похудения
                     <br>
                     <span class="blog-post__date">
-                      25 Сен 2020
+                      10 Сен 2020
                     </span>
                   </p>
                 </a>
@@ -322,13 +323,13 @@
             <button class="blog-tags__tag">
               Аэробика
             </button>
-            <button class="blog-tags__tag">Аэрока</button>
             <button class="blog-tags__tag">Аэробика</button>
-            <button class="blog-tags__tag">Аэробика</button>
-            <button class="blog-tags__tag">Аэробика</button>
-            <button class="blog-tags__tag">Аэробика</button>
-            <button class="blog-tags__tag">Аэробика</button>
-            <button class="blog-tags__tag">Аэробика</button>
+            <button class="blog-tags__tag">Кроссфит</button>
+            <button class="blog-tags__tag">Спиннинг</button>
+            <button class="blog-tags__tag">Бокс</button>
+            <button class="blog-tags__tag">Кикбоксинг</button>
+            <button class="blog-tags__tag">Фитнес</button>
+            <button class="blog-tags__tag">Кардио</button>
           </div>
           <div class="blog-archive">
             <h4 class="blog-archive__title">Архив</h4>
