--- a/src/classes.html
+++ b/src/classes.html
@@ -8,18 +8,19 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link
     href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;1,400;1,600&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" />
   <link rel="stylesheet" href="css/style.min.css" />
 </head>
 <body>
   @@include('_header.html')
   <section class="underheader-bg underheader-bg--classes"></section>
-  <main class="classes__main">
+  <main class="main classes__main">
     <section class="classes__blocks">
       <div class="container">
         <div class="classes__blocks-wrapper">
           <div class="class-block">
-            <img src="img/classes/class-1.jpg" alt="classes-block-img" class="class-block__img">
+            <img src="img/classes/kikboxing.jpg" alt="classes-block-img" class="class-block__img">
             <div class="class-block__info">
               <h3 class="class-block__title">Кикбоксинг</h3>
               <p class="class-block__subtitle">Кикбоксинг – это разновидность боевых искусств, где принято наносить удары и руками, и нижними конечностями.Этот вид спорта сочетает в себе восточные единоборства и классический бокс.</p>
@@ -34,7 +35,7 @@
             </div>
           </div>
           <div class="class-block class-block--light">
-            <img src="img/classes/class-1.jpg" alt="classes-block-img" class="class-block__img">
+            <img src="img/classes/spinning.jpg" alt="classes-block-img" class="class-block__img">
             <div class="class-block__info">
               <h3 class="class-block__title">Спиннинг</h3>
               <p class="class-block__subtitle">Cпининг — это ритмическое катание на тренажере-велосипеде в ритм музыки и в соответствии с  указаниями тренера.</p>
@@ -49,7 +50,7 @@
             </div>
           </div>
           <div class="class-block">
-            <img src="img/classes/class-1.jpg" alt="classes-block-img" class="class-block__img">
+            <img src="img/classes/crossfit.jpg" alt="classes-block-img" class="class-block__img">
             <div class="class-block__info">
               <h3 class="class-block__title">Кроссфит</h3>
               <p class="class-block__subtitle">Кроссфит – это вид функциональных тренировок, объединяющий в себе кардионагрузки, гимнастические и силовые упражнения.</p>
@@ -64,7 +65,7 @@
             </div>
           </div>
           <div class="class-block class-block--light">
-            <img src="img/classes/class-1.jpg" alt="classes-block-img" class="class-block__img">
+            <img src="img/classes/aerobics.jpg" alt="classes-block-img" class="class-block__img">
             <div class="class-block__info">
               <h3 class="class-block__title">Аэробика</h3>
               <p class="class-block__subtitle">Аэробика – это активные, быстрые тренировки, особенно актуальные для тех, кто хочет быстро похудеть.</p>
@@ -80,7 +81,7 @@
             </div>
           </div>
           <div class="class-block">
-            <img src="img/classes/class-1.jpg" alt="classes-block-img" class="class-block__img">
+            <img src="img/classes/cardio.jpg" alt="classes-block-img" class="class-block__img">
             <div class="class-block__info">
               <h3 class="class-block__title">Кардиофитнес</h3>
               <p class="class-block__subtitle">Кардиофитнес– это комплекс упражнений, которые увеличивают сердечный ритм и усиливают циркуляцию крови по всему телу.</p>
@@ -95,7 +96,7 @@
             </div>
           </div>
           <div class="class-block class-block--light">
-            <img src="img/classes/class-1.jpg" alt="classes-block-img" class="class-block__img">
+            <img src="img/classes/box.jpg" alt="classes-block-img" class="class-block__img">
             <div class="class-block__info">
               <h3 class="class-block__title">Бокс</h3>
               <p class="class-block__subtitle"> Бокс – это олимпийский контактный вид спорта, в котором разрешены удары только кулаками и только в специальных перчатках.</p>
