--- a/src/pricing.html
+++ b/src/pricing.html
@@ -4,12 +4,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Gymsport</title>
+  <title>Цены</title>
 
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link
     href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;1,400;1,600&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" />
   <link rel="stylesheet" href="css/style.min.css" />
 
 </head>
@@ -21,20 +22,24 @@
       <section class="pricing-plans">
         <div class="container">
           <div class="pricing-plans__wrapper">
-            <h2 class="pricing-plans__title">PRicing and plans</h2>
+            <h2 class="pricing-plans__title">Цены на абонементы</h2>
             <div class="pricing-plans__blocks">
               <div class="pricing-block">
-                <p class="pricing-block__uppertitle">ONE DAY TRAINING</p>
-                <h3 class="pricing-block__price">Free</h3>
+                <p class="pricing-block__uppertitle">Дневной</p>
+                <h3 class="pricing-block__price">
+                  5000 
+                  <span>р/мес</span>
+                </h3>
                 <ul class="pricing-block__list">
-                  <li class="pricing-block__prefs">Lorem ipsum dolor sit amet</li>
-                  <li class="pricing-block__prefs">Lorem ipsum dolor sit amet</li>
-                  <li class="pricing-block__prefs">Lorem ipsum dolor sit amet</li>
-                  <li class="pricing-block__prefs">Lorem ipsum dolor sit amet</li>
-                  <li class="pricing-block__prefs">Lorem ipsum dolor sit amet</li>
-                  <li class="pricing-block__prefs">Lorem ipsum dolor sit amet</li>
+                  <li class="pricing-block__prefs">Доступ с 10:00 до 17:00</li>
+                  <li class="pricing-block__prefs">Инструктаж во всех залах</li>
+                  <li class="pricing-block__prefs">Фитнес-тестирование</li>
+                  <li class="pricing-block__prefs">Оплата помесячно</li>
+                  <li class="pricing-block__prefs">
+                    Бонусная программа
+                  </li>
                 </ul>
-                <a href="#" class="pricing-block__btn">Buy Now</a>
+                <a href="#" class="pricing-block__btn">Приобрести</a>
               </div>
               <div class="pricing-block">
                 <p class="pricing-block__uppertitle">ONE DAY TRAINING</p>
