--- a/src/timetable.html
+++ b/src/timetable.html
@@ -10,7 +10,8 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;1,400;1,600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
-  <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" />
   <link rel="stylesheet" href="css/style.min.css" />
 
 </head>
@@ -18,7 +19,7 @@
 <body>
   @@include('_header.html')
   <section class="underheader-bg underheader-bg--timetable"></section>
-  <main class="timetable">
+  <main class="main timetable">
     <section class="timetable__table">
       <div class="container">
         <div class="timetable__table-wrapper">
@@ -37,7 +38,7 @@
                 Бокс
               </li>
               <li class="table__nav-name">
-                Кик Боксинг
+                Кикбоксинг
               </li>
               <li class="table__nav-name">
                 Пилатес
@@ -70,20 +71,20 @@
             </tr>
             <tr class="main-table__name">
               <td class="main-table__time">07:00 - 08:00</td>
-              <td>Кик Боксинг - Зал B</td>
+              <td>Кикбоксинг - Зал B</td>
               <td>Кроссфит - Зал B</td>
               <td></td>
-              <td>Кик Боксинг - Зал B</td>
+              <td>Кикбоксинг - Зал B</td>
               <td>Спиннинг- Зал D</td>
               <td>Кроссфит - Зал B</td>
-              <td>Кик Боксинг - Зал B</td>
+              <td>Кикбоксинг - Зал B</td>
             </tr>
             <tr class="main-table__name">
               <td class="main-table__time">08:00 - 9:00</td>
               <td>Бокс - Зал C</td>
-              <td>Спиннинг- Зал D</td>
+              <td>Спиннинг - Зал D</td>
               <td>Бокс - Зал C</td>
-              <td>Спиннинг- Зал D</td>
+              <td>Спиннинг - Зал D</td>
               <td></td>
               <td>Спиннинг- Зал D</td>
               <td>Бокс - Зал C</td>
@@ -96,16 +97,16 @@
               <td>Кроссфит - Зал B</td>
               <td>Аэробика - Зал A</td>
               <td></td>
-              <td>Спиннинг- Зал D</td>
+              <td>Спиннинг - Зал D</td>
             </tr>
             <tr class="main-table__name">
               <td class="main-table__time">10:00 - 11:00</td>
               <td>Пилатес - Зал D</td>
               <td>Кроссфит - Зал B</td>
               <td></td>
-              <td>Спиннинг- Зал D</td>
+              <td>Спиннинг - Зал D</td>
               <td></td>
-              <td>Спиннинг- Зал D</td>
+              <td>Спиннинг - Зал D</td>
               <td>Пилатес - Зал D</td>
             </tr>
             <tr class="main-table__name">
@@ -123,20 +124,20 @@
               <td></td>
               <td>Кроссфит - Зал B</td>
               <td></td>
-              <td>Кик Боксинг - Зал B</td>
+              <td>Кикбоксинг - Зал B</td>
               <td></td>
-              <td>Спиннинг- Зал D</td>
-              <td>Спиннинг- Зал D</td>
+              <td>Спиннинг - Зал D</td>
+              <td>Спиннинг - Зал D</td>
             </tr>
             <tr class="main-table__name">
               <td class="main-table__time">13:00 - 14:00</td>
               <td></td>
-              <td>Кик Боксинг - Зал B</td>
+              <td>Кикбоксинг - Зал B</td>
               <td></td>
               <td>Кроссфит - Зал B</td>
               <td></td>
               <td></td>
-              <td>Кик Боксинг - Зал B</td>
+              <td>Кикбоксинг - Зал B</td>
             </tr>
             <tr class="main-table__name">
               <td class="main-table__time">14:00 - 15:00</td>
@@ -144,9 +145,9 @@
               <td></td>
               <td>Аэробика - Зал A</td>
               <td></td>
-              <td>Спиннинг- Зал D</td>
+              <td>Спиннинг - Зал D</td>
               <td>Аэробика - Зал A</td>
-              <td>Спиннинг- Зал D</td>
+              <td>Спиннинг - Зал D</td>
             </tr>
             <tr class="main-table__name">
               <td class="main-table__time">15:00 - 16:00</td>
@@ -164,9 +165,9 @@
               <td>Кроссфит - Зал B</td>
               <td></td>
               <td></td>
-              <td>Спиннинг- Зал D</td>
+              <td>Спиннинг - Зал D</td>
               <td></td>
-              <td>Спиннинг- Зал D</td>
+              <td>Спиннинг - Зал D</td>
             </tr>
           </table>
         </div>
